--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,6 +14,10 @@
         <h:outputText value="#{titulo}"/>
     </h1>
 
+    <h:form>
+    <h:commandButton value="Crear Producto" action="form.xhtml" />
+    </h:form>
+
     <h:dataTable value="#{listado}" var="prod">
         <h:column>
             <f:facet name="header">
