--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,50 +10,84 @@
 </h:head>
 
 <h:body>
-    <h1>
-        <h:outputText value="#{titulo}"/>
-    </h1>
 
-    <h:form>
-    <h:commandButton value="Crear Producto" action="form.xhtml" />
-    </h:form>
+    <h:panelGrid border="1">
+        <f:facet name="header">
+            <h:outputText value="#{titulo}"/>
+        </f:facet>
 
-    <h:dataTable value="#{listado}" var="prod">
-        <h:column>
-            <f:facet name="header">
-                <h:outputText value="Id"/>
-            </f:facet>
-            <h:outputText value="#{prod.id}"/>
-        </h:column>
+        <h:form id="crearForm">
+            <h:commandButton value="Crear Producto" action="form.xhtml"/>
+        </h:form>
 
-        <h:column>
-            <f:facet name="header">
-                <h:outputText value="Nombre"/>
-            </f:facet>
-            <h:outputText value="#{prod.nombre}"/>
-        </h:column>
+        <h:outputText value="No existen productos en la base de datos!" rendered="#{empty listado}" />
 
-        <h:column>
-            <f:facet name="header">
-                <h:outputText value="Sku"/>
-            </f:facet>
-            <h:outputText value="#{prod.sku}"/>
-        </h:column>
+        <h:dataTable value="#{listado}" var="prod" rendered="#{not empty listado}">
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Id"/>
+                </f:facet>
+                <h:outputText value="#{prod.id}"/>
+            </h:column>
 
-        <h:column>
-            <f:facet name="header">
-                <h:outputText value="Precio"/>
-            </f:facet>
-            <h:outputText value="#{prod.precio}"/>
-        </h:column>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Nombre"/>
+                </f:facet>
+                <h:outputText value="#{prod.nombre}"/>
+            </h:column>
 
-        <h:column>
-            <f:facet name="header">
-                <h:outputText value="Fecha"/>
-            </f:facet>
-            <h:outputText value="#{prod.fechaRegistro}"/>
-        </h:column>
-    </h:dataTable>
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Sku"/>
+                </f:facet>
+                <h:outputText value="#{prod.sku}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Precio"/>
+                </f:facet>
+                <h:outputText value="#{prod.precio}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="Fecha"/>
+                </f:facet>
+                <h:outputText value="#{prod.fechaRegistro}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="editar" />
+                </f:facet>
+                <h:form id="editarForm">
+                    <h:commandLink value="editar" action="#{productoController.editar(prod.id)}" />
+                </h:form>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="editar2" />
+                </f:facet>
+                    <h:link value="editar2" outcome="form">
+                        <f:param name="id" value="#{prod.id}" />
+                    </h:link>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
+                    <h:outputText value="eliminar" />
+                </f:facet>
+                <h:form id="eliminarForm">
+                    <h:commandLink value="eliminar" action="#{productoController.eliminar(prod.id)}"
+                    onclick="return confirm('Esta seguro que desea eliminar?')"/>
+                </h:form>
+            </h:column>
+
+        </h:dataTable>
+    </h:panelGrid>
 
 </h:body>
 </html>
