--- a/src/main/webapp/form.xhtml
+++ b/src/main/webapp/form.xhtml
@@ -14,9 +14,11 @@
         <f:viewParam name="id" value="#{productoController.id}" />
     </f:metadata>
 
+    <h:messages style="color:red" />
+
     <h:panelGrid border="1">
     <f:facet name="header">
-        <h:outputText value="Formulario Producto"/>
+        <h:outputText value="#{producto.id>0?'Editar':'Crear'} Producto"/>
     </f:facet>
 
     <h:link outcome="index" value="volver" />
@@ -24,15 +26,21 @@
     <h:form>
         <h:panelGrid columns="2">
             <h:outputLabel value="Nombre" for="nombre" />
-            <h:inputText id="nombre" value="#{producto.nombre}" />
+            <h:inputText id="nombre" value="#{producto.nombre}" label="Nombre" required="true" />
 
             <h:outputLabel value="Precio" for="precio" />
-            <h:inputText id="precio" value="#{producto.precio}" />
+            <h:inputText id="precio" value="#{producto.precio}" label="Precio" required="true" />
 
             <h:outputLabel value="Sku" for="sku" />
-            <h:inputText id="sku" value="#{producto.sku}" />
+            <h:inputText id="sku" value="#{producto.sku}" label="Sku" required="true" />
 
-            <h:commandButton value="Crear" action="#{productoController.guardar}" />
+            <h:outputLabel value="Fecha" for="fechaRegistro" />
+            <h:inputText id="fechaRegistro" value="#{producto.fechaRegistro}" label="Fecha Registro" required="true" convertMessage="Indique la fecha en formato yyyy-MM-dd">
+                <f:convertDateTime type="localDate" pattern="yyyy-MM-dd" />
+                <f:passThroughAttribute name="type" value="date" />
+            </h:inputText>
+
+            <h:commandButton value="#{producto.id>0?'Editar':'Crear'}" action="#{productoController.guardar}" />
             <h:inputHidden value="#{producto.id}" />
         </h:panelGrid>
     </h:form>
