Creacion de package converters y clase CategoriaConverter, ademas de mejoras en la seleccion de categorias en form

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -62,6 +62,13 @@
 
             <h:column>
                 <f:facet name="header">
+                    <h:outputText value="Categoria"/>
+                </f:facet>
+                <h:outputText value="#{prod.categoria.nombre}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">
                     <h:outputText value="editar"/>
                 </f:facet>
                 <h:form id="editarForm">
