--- a/src/main/webapp/form.xhtml
+++ b/src/main/webapp/form.xhtml
@@ -7,54 +7,79 @@
 <h:head>
     <meta charset="UTF-8"/>
     <title>Formulario Producto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
 </h:head>
 
 <h:body>
     <f:metadata>
-        <f:viewParam name="id" value="#{productoController.id}" />
+        <f:viewParam name="id" value="#{productoController.id}"/>
     </f:metadata>
 
-    <h:panelGrid border="1">
-    <f:facet name="header">
-        <h:outputText value="#{producto.id>0?'Editar':'Crear'} Producto"/>
-    </f:facet>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Online Products</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <h:link outcome="index" value="Home" class="nav-link active"/>
+                    </li>
+                    <li class="nav-item">
+                        <h:link outcome="form" value="Crear Producto" class="nav-link"/>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <h:link outcome="index" value="volver" />
+    <div class="container">
+        <h:panelGrid border="1" class="table">
+            <f:facet name="header">
+                <h:outputText value="#{producto.id>0?'Editar':'Crear'} Producto"/>
+            </f:facet>
 
-    <h:form>
-        <h:panelGrid columns="3">
-            <h:outputLabel value="Nombre" for="nombre" />
-            <h:inputText id="nombre" value="#{producto.nombre}" label="Nombre" />
-            <h:message for="nombre" style="color:crimson;" />
+            <h:link outcome="index" value="volver" class="btn btn-sm btn-primary my-2"/>
 
-            <h:outputLabel value="Precio" for="precio" />
-            <h:inputText id="precio" value="#{producto.precio}" label="Precio" />
-            <h:message for="precio" style="color:crimson;" />
+            <h:form>
+                <h:panelGrid columns="3" class="table table-hover table-striped">
+                    <h:outputLabel value="Nombre" for="nombre" class="col-form-label"/>
+                    <h:inputText id="nombre" value="#{producto.nombre}" label="Nombre" class="form-control"/>
+                    <h:message for="nombre" style="color:crimson;"/>
 
-            <h:outputLabel value="Sku" for="sku" />
-            <h:inputText id="sku" value="#{producto.sku}" label="Sku" />
-            <h:message for="sku" style="color:crimson;" />
+                    <h:outputLabel value="Precio" for="precio" class="col-form-label"/>
+                    <h:inputText id="precio" value="#{producto.precio}" label="Precio" class="form-control"/>
+                    <h:message for="precio" style="color:crimson;"/>
 
-            <h:outputLabel value="Fecha" for="fechaRegistro" />
-            <h:inputText id="fechaRegistro" value="#{producto.fechaRegistro}" label="Fecha Registro" convertMessage="Indique la fecha en formato yyyy-MM-dd">
-                <f:convertDateTime type="localDate" pattern="yyyy-MM-dd" />
-                <f:passThroughAttribute name="type" value="date" />
-            </h:inputText>
-            <h:message for="fechaRegistro" style="color:crimson;" />
+                    <h:outputLabel value="Sku" for="sku" class="col-form-label"/>
+                    <h:inputText id="sku" value="#{producto.sku}" label="Sku" class="form-control"/>
+                    <h:message for="sku" style="color:crimson;"/>
 
-            <h:outputLabel value="Categoria" for="categoria" />
-            <h:selectOneMenu id="categoria" value="#{producto.categoria}">
-                <f:selectItem itemLabel="--- seleccione categoria ---" itemValue="#{null}" />
-                <f:selectItems value="#{categorias}" var="cat" itemLabel="#{cat.nombre}" />
-                <f:converter binding="#{categoriaConverter}" />
-            </h:selectOneMenu>
-            <h:message for="categoria" style="color:crimson;" />
+                    <h:outputLabel value="Fecha" for="fechaRegistro" class="col-form-label"/>
+                    <h:inputText id="fechaRegistro" value="#{producto.fechaRegistro}" label="Fecha Registro"
+                                 convertMessage="Indique la fecha en formato yyyy-MM-dd" class="form-control">
+                        <f:convertDateTime type="localDate" pattern="yyyy-MM-dd"/>
+                        <f:passThroughAttribute name="type" value="date"/>
+                    </h:inputText>
+                    <h:message for="fechaRegistro" style="color:crimson;"/>
 
-            <h:commandButton value="#{producto.id>0?'Editar':'Crear'}" action="#{productoController.guardar}" />
-            <h:inputHidden value="#{producto.id}" />
+                    <h:outputLabel value="Categoria" for="categoria" class="col-form-label"/>
+                    <h:selectOneMenu id="categoria" value="#{producto.categoria}" class="form-select">
+                        <f:selectItem itemLabel="--- seleccione categoria ---" itemValue="#{null}"/>
+                        <f:selectItems value="#{categorias}" var="cat" itemLabel="#{cat.nombre}"/>
+                        <f:converter binding="#{categoriaConverter}"/>
+                    </h:selectOneMenu>
+                    <h:message for="categoria" style="color:crimson;"/>
+
+                    <h:commandButton value="#{producto.id>0?'Editar':'Crear'}" action="#{productoController.guardar}" class="btn btn-primary"/>
+                    <h:inputHidden value="#{producto.id}"/>
+                    <p>&#160;</p>
+                </h:panelGrid>
+            </h:form>
         </h:panelGrid>
-    </h:form>
-    </h:panelGrid>
+    </div>
 
 </h:body>
 </html>
