--- a/src/main/webapp/form.xhtml
+++ b/src/main/webapp/form.xhtml
@@ -1,41 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="/WEB-INF/layouts/main.xhtml">
 
-<h:head>
-    <meta charset="UTF-8"/>
-    <title>Formulario Producto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-</h:head>
+    <ui:define name="content">
 
-<h:body>
-    <f:metadata>
-        <f:viewParam name="id" value="#{productoController.id}"/>
-    </f:metadata>
+        <f:metadata>
+            <f:viewParam name="id" value="#{productoController.id}"/>
+        </f:metadata>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Online Products</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <h:link outcome="index" value="Home" class="nav-link active"/>
-                    </li>
-                    <li class="nav-item">
-                        <h:link outcome="form" value="Crear Producto" class="nav-link"/>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container">
         <h:panelGrid border="1" class="table">
             <f:facet name="header">
                 <h:outputText value="#{producto.id>0?'Editar':'Crear'} Producto"/>
@@ -73,13 +48,13 @@
                     </h:selectOneMenu>
                     <h:message for="categoria" style="color:crimson;"/>
 
-                    <h:commandButton value="#{producto.id>0?'Editar':'Crear'}" action="#{productoController.guardar}" class="btn btn-primary"/>
+                    <h:commandButton value="#{producto.id>0?'Editar':'Crear'}" action="#{productoController.guardar}"
+                                     class="btn btn-primary"/>
                     <h:inputHidden value="#{producto.id}"/>
                     <p>&#160;</p>
                 </h:panelGrid>
             </h:form>
         </h:panelGrid>
-    </div>
 
-</h:body>
-</html>
+    </ui:define>
+</ui:composition>
