--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,38 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="/WEB-INF/layouts/main.xhtml">
 
-<h:head>
-    <meta charset="UTF-8"/>
-    <title>#{titulo}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-</h:head>
+    <ui:define name="content">
 
-<h:body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Online Products</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <h:link outcome="index" value="Home" class="nav-link active"/>
-                    </li>
-                    <li class="nav-item">
-                        <h:link outcome="form" value="Crear Producto" class="nav-link"/>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container">
         <h:panelGrid border="1" class="table">
             <f:facet name="header">
                 <h:outputText value="#{titulo}"/>
@@ -42,9 +16,11 @@
                 <h:commandButton value="Crear Producto" action="form.xhtml" class="btn btn-primary my-2"/>
             </h:form>
 
-            <h:outputText value="No existen productos en la base de datos!" rendered="#{empty listado}" class="alert alert-warning"/>
+            <h:outputText value="No existen productos en la base de datos!" rendered="#{empty listado}"
+                          class="alert alert-warning"/>
 
-            <h:dataTable value="#{listado}" var="prod" rendered="#{not empty listado}" class="table table-hover table-striped">
+            <h:dataTable value="#{listado}" var="prod" rendered="#{not empty listado}"
+                         class="table table-hover table-striped">
                 <h:column>
                     <f:facet name="header">
                         <h:outputText value="Id"/>
@@ -94,7 +70,8 @@
                         <h:outputText value="editar"/>
                     </f:facet>
                     <h:form id="editarForm">
-                        <h:commandLink value="editar" action="#{productoController.editar(prod.id)}" class="btn btn-sm btn-success"/>
+                        <h:commandLink value="editar" action="#{productoController.editar(prod.id)}"
+                                       class="btn btn-sm btn-success"/>
                     </h:form>
                 </h:column>
 
@@ -112,14 +89,13 @@
                         <h:outputText value="eliminar"/>
                     </f:facet>
                     <h:form id="eliminarForm">
-                        <h:commandLink value="eliminar" action="#{productoController.eliminar(prod.id)}" class="btn btn-sm btn-danger"
+                        <h:commandLink value="eliminar" action="#{productoController.eliminar(prod.id)}"
+                                       class="btn btn-sm btn-danger"
                                        onclick="return confirm('Esta seguro que desea eliminar?')"/>
                     </h:form>
                 </h:column>
 
             </h:dataTable>
         </h:panelGrid>
-    </div>
-
-</h:body>
-</html>
+    </ui:define>
+</ui:composition>
