--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -89,7 +89,7 @@
                         <h:outputText value="eliminar"/>
                     </f:facet>
                     <h:form id="eliminarForm">
-                        <h:commandLink value="eliminar" action="#{productoController.eliminar(prod.id)}"
+                        <h:commandLink value="eliminar" action="#{productoController.eliminar(prod)}"
                                        class="btn btn-sm btn-danger"
                                        onclick="return confirm('Esta seguro que desea eliminar?')"/>
                     </h:form>
