--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,45 +13,45 @@
             </f:facet>
 
             <h:form id="crearForm">
-                <h:commandButton value="Crear Producto" action="form.xhtml" class="btn btn-primary my-2"/>
+                <h:commandButton value="#{msg['navbar.texto.crear']}" action="form.xhtml" class="btn btn-primary my-2"/>
             </h:form>
 
-            <h:outputText value="No existen productos en la base de datos!" rendered="#{empty listado}"
+            <h:outputText value="#{msg['producto.texto.noexiste']}" rendered="#{empty listado}"
                           class="alert alert-warning"/>
 
             <h:dataTable value="#{listado}" var="prod" rendered="#{not empty listado}"
                          class="table table-hover table-striped">
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="Id"/>
+                        <h:outputText value="#{msg['producto.id']}"/>
                     </f:facet>
                     <h:outputText value="#{prod.id}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="Nombre"/>
+                        <h:outputText value="#{msg['producto.nombre']}"/>
                     </f:facet>
                     <h:outputText value="#{prod.nombre}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="Sku"/>
+                        <h:outputText value="#{msg['producto.sku']}"/>
                     </f:facet>
                     <h:outputText value="#{prod.sku}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="Precio"/>
+                        <h:outputText value="#{msg['producto.precio']}"/>
                     </f:facet>
                     <h:outputText value="#{prod.precio}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="Fecha"/>
+                        <h:outputText value="#{msg['producto.fechaRegistro']}"/>
                     </f:facet>
                     <h:outputText value="#{prod.fechaRegistro}">
                         <f:convertDateTime type="localDate" pattern="dd/MM/yyyy"/>
@@ -60,36 +60,36 @@
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="Categoria"/>
+                        <h:outputText value="#{msg['producto.categoria']}"/>
                     </f:facet>
                     <h:outputText value="#{prod.categoria.nombre}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="editar"/>
+                        <h:outputText value="#{msg['producto.boton.editar']}"/>
                     </f:facet>
                     <h:form id="editarForm">
-                        <h:commandLink value="editar" action="#{productoController.editar(prod.id)}"
+                        <h:commandLink value="#{msg['producto.boton.editar']}" action="#{productoController.editar(prod.id)}"
                                        class="btn btn-sm btn-success"/>
                     </h:form>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="editar2"/>
+                        <h:outputText value="#{msg['producto.boton.editar']}"/>
                     </f:facet>
-                    <h:link value="editar2" outcome="form" class="btn btn-sm btn-info">
+                    <h:link value="#{msg['producto.boton.editar']}" outcome="form" class="btn btn-sm btn-info">
                         <f:param name="id" value="#{prod.id}"/>
                     </h:link>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">
-                        <h:outputText value="eliminar"/>
+                        <h:outputText value="#{msg['producto.boton.eliminar']}"/>
                     </f:facet>
                     <h:form id="eliminarForm">
-                        <h:commandLink value="eliminar" action="#{productoController.eliminar(prod)}"
+                        <h:commandLink value="#{msg['producto.boton.eliminar']}" action="#{productoController.eliminar(prod)}"
                                        class="btn btn-sm btn-danger"
                                        onclick="return confirm('Esta seguro que desea eliminar?')"/>
                     </h:form>
