--- a/src/main/webapp/form.xhtml
+++ b/src/main/webapp/form.xhtml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/layouts/main.xhtml">
 
     <ui:define name="content">
@@ -11,50 +11,88 @@
             <f:viewParam name="id" value="#{productoController.id}"/>
         </f:metadata>
 
-        <h:panelGrid border="1" class="table">
-            <f:facet name="header">
-                <h:outputText value="#{producto.id>0? msg['producto.boton.editar']: msg['producto.boton.crear']} #{msg['producto.texto']}"/>
-            </f:facet>
+        <p:panel
+                header="#{producto.id>0? msg['producto.boton.editar']: msg['producto.boton.crear']} #{msg['producto.texto']}">
 
-            <h:link outcome="index" value="#{msg['producto.boton.volver']}" class="btn btn-sm btn-primary my-2"/>
+            <p:linkButton outcome="index" value="#{msg['producto.boton.volver']}" class="p-my-2"/>
 
             <h:form>
-                <h:panelGrid columns="3" class="table table-hover table-striped">
-                    <h:outputLabel value="#{msg['producto.nombre']}" for="nombre" class="col-form-label"/>
-                    <h:inputText id="nombre" value="#{producto.nombre}" label="Nombre" class="form-control"/>
-                    <h:message for="nombre" style="color:crimson;"/>
+                <div class="p-field p-grid">
+                    <p:outputLabel value="#{msg['producto.nombre']}" for="nombre" class="p-col-fixed"
+                                   style="width: 200px"/>
+                    <div class="p-col">
+                        <p:inputText id="nombre" value="#{producto.nombre}" label="Nombre"/>
+                        <!--<div class="p-col">-->
+                        <p:message for="nombre" style="color:crimson;"/>
+                        <!--</div>-->
+                    </div>
+                </div>
 
-                    <h:outputLabel value="#{msg['producto.precio']}" for="precio" class="col-form-label"/>
-                    <h:inputText id="precio" value="#{producto.precio}" label="Precio" class="form-control"/>
-                    <h:message for="precio" style="color:crimson;"/>
+                <div class="p-field p-grid">
+                    <p:outputLabel value="#{msg['producto.precio']}" for="precio" class="p-col-fixed"
+                                   style="width: 200px"/>
+                    <div class="p-col">
+                        <p:inputText id="precio" value="#{producto.precio}" label="Precio"/>
+                        <!--<div class="p-col">-->
+                        <p:message for="precio" style="color:crimson;"/>
+                        <!--</div>-->
+                    </div>
+                </div>
 
-                    <h:outputLabel value="#{msg['producto.sku']}" for="sku" class="col-form-label"/>
-                    <h:inputText id="sku" value="#{producto.sku}" label="Sku" class="form-control"/>
-                    <h:message for="sku" style="color:crimson;"/>
+                <div class="p-field p-grid">
+                    <p:outputLabel value="#{msg['producto.sku']}" for="sku" class="p-col-fixed" style="width: 200px"/>
+                    <div class="p-col">
+                        <p:inputText id="sku" value="#{producto.sku}" label="Sku"/>
+                        <!--<div class="p-col">-->
+                        <p:message for="sku" style="color:crimson;"/>
+                        <!--</div>-->
+                    </div>
+                </div>
 
-                    <h:outputLabel value="#{msg['producto.fechaRegistro']}" for="fechaRegistro" class="col-form-label"/>
-                    <h:inputText id="fechaRegistro" value="#{producto.fechaRegistro}" label="Fecha Registro"
-                                 convertMessage="Indique la fecha en formato yyyy-MM-dd" class="form-control">
-                        <f:convertDateTime type="localDate" pattern="yyyy-MM-dd"/>
-                        <f:passThroughAttribute name="type" value="date"/>
-                    </h:inputText>
-                    <h:message for="fechaRegistro" style="color:crimson;"/>
+                <div class="p-field p-grid">
+                    <p:outputLabel value="#{msg['producto.fechaRegistro']}" for="fechaRegistro" class="p-col-fixed"
+                                   style="width: 200px"/>
+                    <div class="p-col">
+                        <p:datePicker pattern="yyyy-MM-dd" id="fechaRegistro" value="#{producto.fechaRegistro}"
+                                      label="Fecha Registro"
+                                      converterMessage="Indique la fecha en formato yyyy-MM-dd">
+                            <f:convertDateTime type="localDate" pattern="yyyy-MM-dd"/>
+                            <f:passThroughAttribute name="type" value="date"/>
+                        </p:datePicker>
+                        <!--</div>-->
+                        <!--<div class="p-col">-->
+                        <p:message for="fechaRegistro" style="color:crimson;"/>
+                    </div>
+                </div>
 
-                    <h:outputLabel value="#{msg['producto.categoria']}" for="categoria" class="col-form-label"/>
-                    <h:selectOneMenu id="categoria" value="#{producto.categoria}" class="form-select">
-                        <f:selectItem itemLabel="--- seleccione categoria ---" itemValue="#{null}"/>
-                        <f:selectItems value="#{categorias}" var="cat" itemLabel="#{cat.nombre}"/>
-                        <f:converter binding="#{categoriaConverter}"/>
-                    </h:selectOneMenu>
-                    <h:message for="categoria" style="color:crimson;"/>
+                <div class="p-field p-grid">
+                    <p:outputLabel value="#{msg['producto.categoria']}" for="categoria" class="p-col-fixed"
+                                   style="width: 200px"/>
+                    <div class="p-col">
+                        <p:selectOneMenu id="categoria" value="#{producto.categoria}">
+                            <f:selectItem itemLabel="--- seleccione categoria ---" itemValue="#{null}"/>
+                            <f:selectItems value="#{categorias}" var="cat" itemLabel="#{cat.nombre}"/>
+                            <f:converter binding="#{categoriaConverter}"/>
+                        </p:selectOneMenu>
+                        <!--</div>-->
+                        <!--<div class="p-col">-->
+                        <p:message for="categoria" style="color:crimson;"/>
+                        <!--</div>-->
+                    </div>
+                </div>
 
-                    <h:commandButton value="#{producto.id>0? msg['producto.boton.editar']: msg['producto.boton.crear']}" action="#{productoController.guardar}"
-                                     class="btn btn-primary"/>
+                <div class="p-field p-grid">
+                    <div class="p-col">
+                        <p:commandButton
+                                value="#{producto.id>0? msg['producto.boton.editar']: msg['producto.boton.crear']}"
+                                action="#{productoController.guardar}"
+                                class="ui-button-outlined ui-button-success" update="@form"/>
+                    </div>
                     <h:inputHidden value="#{producto.id}"/>
-                    <p>&#160;</p>
-                </h:panelGrid>
+                </div>
+
             </h:form>
-        </h:panelGrid>
+        </p:panel>
 
     </ui:define>
 </ui:composition>
