Implementacion de seguridad JAAS y pagina JSF de form para Login y manejo de error en login

--- a/src/main/webapp/form.xhtml
+++ b/src/main/webapp/form.xhtml
@@ -5,7 +5,7 @@
               xmlns:p="http://primefaces.org/ui">
 
 
-    <h:form id="formProducto">
+    <h:form id="formProducto" rendered="#{p:ifGranted('ADMIN')}">
         <div class="p-field p-grid">
             <p:outputLabel value="#{msg['producto.nombre']}" for="nombre" class="p-col-fixed"
                            style="width: 200px"/>
