--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
             </f:facet>
 
             <p:divider/>
-            <h:form id="crearForm">
+            <h:form id="crearForm" rendered="#{p:ifGranted('ADMIN')}">
                 <p:commandButton value="#{msg['navbar.texto.crear']}" class="p-my-2" onclick="PF('dialogForm').show()"
                                  icon="pi pi-plus-circle">
                     <p:resetInput target="formProducto"/>
@@ -74,7 +74,7 @@
                     <h:outputText value="#{prod.categoria.nombre}"/>
                 </p:column>
 
-                <p:column headerText="#{msg['producto.boton.editar']}">
+                <p:column rendered="#{p:ifGranted('ADMIN')}" headerText="#{msg['producto.boton.editar']}">
                     <h:form id="editarForm">
                         <p:commandButton value="#{msg['producto.boton.editar']}"
                                          action="#{productoController.editar(prod.id)}"
@@ -85,7 +85,7 @@
                     </h:form>
                 </p:column>
 
-                <p:column headerText="#{msg['producto.boton.eliminar']}">
+                <p:column rendered="#{p:ifGranted('ADMIN')}" headerText="#{msg['producto.boton.eliminar']}">
                     <h:form id="eliminarForm">
                         <p:commandButton value="#{msg['producto.boton.eliminar']}"
                                          action="#{productoController.eliminar(prod)}"
@@ -97,7 +97,7 @@
             </p:dataTable>
 
             <p:dialog
-                    header="#{productoController.producto.id>0? msg['producto.boton.editar']: msg['producto.boton.crear']} #{msg['producto.texto']}"
+                    rendered="#{p:ifGranted('ADMIN')}" header="#{productoController.producto.id>0? msg['producto.boton.editar']: msg['producto.boton.crear']} #{msg['producto.texto']}"
                     widgetVar="dialogForm" minHeight="200" minWidth="500" showEffect="fade" modal="true">
                 <p:ajax event="close" listener="#{productoController.cerrarDialogo}" update="formProducto"/>
                 <ui:include src="form.xhtml"/>
