--- a/src/main/webapp/loginError.xhtml
+++ b/src/main/webapp/loginError.xhtml
@@ -6,8 +6,11 @@
                 template="/WEB-INF/layouts/main.xhtml">
 
     <ui:define name="content">
+        <!-- Panel displaying an error message when login fails -->
         <p:panel header="Error en Login">
+            <!-- Static message indicating login credentials are incorrect -->
             <p:staticMessage severity="error" summary="ERROR" detail="Username o Password incorrecto"/>
+            <!-- Link button to navigate back to the login page -->
             <p:linkButton outcome="login" value="Login" styleClass="p-my-2"/>
         </p:panel>
 
