Estilo a botones de login

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -39,10 +39,12 @@
 
                 <!-- Login button -->
                 <div class="p-field p-grid">
-                    <div class="p-col">
-                        <p:button onclick="submit()"
-                                  value="Login"
-                                  class="ui-button-outlined ui-button-success"/>
+                    <div class="p-col-12">
+                        <button type="submit"
+                                class="ui-button ui-widget ui-state-default ui-corner-all ui-button-outlined ui-button-success"
+                                style="font-size: 1rem; padding: 8px 16px; border-radius: 4px; display: inline-block;">
+                            Login
+                        </button>
                     </div>
                 </div>
 
